# Tracey

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ExportToJson.py  README.md  config.txt  deliver.sh  get_sources.bat  get_sources.sh  pbrt_to_list.py  scene1.json
scenes/: beers_law.json  double_mirror.json  imgui.ini  mesh.json  mesh_brute.json  mesh_scene_graph.json  museum.json  pink_blue.json  plane_sphere.json  refraction_test.json  scene1.json  scene_all.json  torus_spotlight.json
src/: animation.cpp  animation.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  core.cpp  core.hpp  defs.cpp  defs.hpp  easing.hpp  geometry.hpp  imfilebrowser.h  importer.cpp  importer.hpp  input_manager.cpp  input_manager.hpp  light_object.hpp  material.cpp  material.hpp  materials_manager.cpp  materials_manager.hpp  mesh.hpp  options_manager.cpp  options_manager.hpp  quartic.cpp  quartic.h  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_parser.cpp  scene_parser.hpp  thread_pool.cpp  thread_pool.h  thread_pool.hpp  tracey.cpp  transform.cpp  transform.hpp
src/bxdf/: bxdf.hpp
src/hittables/: curve.cpp  curve.hpp  hittable.hpp  instance.hpp  mesh.cpp  mesh.hpp  plane.hpp  sphere.hpp  torus.hpp  triangle.cpp  triangle.hpp  triangle_mesh.cpp  triangle_mesh.hpp
src/kernels/: mega_kernel.glsl
src/lights/: ambient_light.cpp  ambient_light.hpp  area_light.cpp  area_light.hpp  directional_light.cpp  directional_light.hpp  enviromental_light.cpp  enviromental_light.hpp  light_object.hpp  point_light.cpp  point_light.hpp  spot_light.cpp  spot_light.hpp
src/materials/: checkered.hpp  diffuse.hpp  lambertian.hpp  material.hpp  material_dielectric.hpp  material_diffuse.hpp  material_emissive.hpp  material_mirror.hpp  metal.hpp
src/textures/: checkered.hpp  image_texture.cpp  image_texture.hpp  solid_color.hpp  texture.hpp
website/: index.html
